# locket_api

./: .gitignore  CMakeLists.txt  INVENTORY.md  README.md  TODO.md  example.cpp  example2.cpp
.github/workflows/: ci.yml
api/: CMakeLists.txt  beeper.h  behavior.h  color.h  common_states.h  eeprom.h  led.h  logger.h  pill_manager.h  radio.h  rx_table.h  rx_table_test.cpp  sequences.h  uart_command.h  utility.cpp  utility.h  vibro.h
embedded/: CMakeLists.txt  STM32L151x8.ld  Sequences.h  behavior_runner.h  board.h  eventHandlers.cpp  health.cpp  main.cpp  openocd.cfg  openocd_reset.cfg  sequences_collection.h  toolchain.cmake
embedded/Pill/: CMakeLists.txt  pill.h  pill_mgr.cpp  pill_mgr.h
embedded/Radio/: CMakeLists.txt  cc1101.cpp  cc1101.h  cc1101_rf_settings.h  radio_lvl1.cpp  radio_lvl1.h  radio_lvl2.h
embedded/kl_lib/: CMakeLists.txt  ChunkTypes.h  MsgQ.h  PinSnsSettings.h  SimpleSensors.cpp  beeper.h  buttons.cpp  buttons.h  color.h  kl_i2c.cpp  kl_i2c.h  kl_lib.cpp  kl_lib.h  led.h  shell.cpp  uart.cpp  vibro.h
embedded/os/: CMakeLists.txt
embedded/os/hal/: hal.c  hal.h  hal_st.c  hal_st.h  hal_st_lld.cpp  hal_st_lld.h
embedded/os/stm32L15x/: stm32_dma.c
embedded/wrappers/: CMakeLists.txt  beeper_wrapper.cpp  beeper_wrapper.h  eeprom_wrapper.cpp  eeprom_wrapper.h  logger_wrapper.cpp  logger_wrapper.h  pill_manager_wrapper.h  radio_wrapper.h  rgb_led_wrapper.cpp  rgb_led_wrapper.h  uart_command_wrapper.cpp  uart_command_wrapper.h  vibro_wrapper.cpp  vibro_wrapper.h
emulator/: CMakeLists.txt  emulator.h  fake_beeper.cpp  fake_beeper.h  fake_eeprom.cpp  fake_eeprom.h  fake_eeprom_test.cpp  fake_led.cpp  fake_led.h  fake_led_test.cpp  fake_pill_manager.cpp  fake_pill_manager.h  fake_radio.h  fake_uart_command.cpp  fake_uart_command.h  fake_vibro.cpp  fake_vibro.h  sequenceable.h  stdout_logger.cpp  stdout_logger.h
examples/: CMakeLists.txt  basic_behavior.cpp  basic_behavior.h  basic_behavior_emulator.cpp  basic_behavior_firmware.cpp  giganda_behavior_emulator.cpp  giganda_main.cpp  try_giganda.cpp  try_giganda.h
projects/: CMakeLists.txt  README.md  basic_behavior.cpp  basic_behavior.h  basic_behavior_emulator.cpp  eventHandlers.cpp  feeling_behavior.cpp  feeling_behavior.h  feeling_behavior_firmware.cpp  giganda_behavior.cpp  giganda_behavior.h  giganda_behavior_emulator.cpp  giganda_firmware.cpp  integration_testing_behavior.cpp  integration_testing_behavior.h  integration_testing_behavior_firmware.cpp  kirlits.h  kirlits_behavior.cpp  kirlits_behavior.h  kirlits_behavior_emulator.cpp  kirlits_behavior_firmware.cpp  sequence_creation_test.cpp  sm_behavior.cpp  sm_behavior.h  sm_behavior_emulator.cpp  sm_behavior_firmware.cpp
projects/Mariy_El_sm/: Ability.graphml  Glue.h  Mariy_El_emulator.cpp  Mariy_El_firmware.cpp  ability.cpp  ability.h  eventHadlers.cpp  eventHandlers.cpp  eventHandlers.h  health.cpp  health.h  lustra.cpp  lustra.h  magic_path_behavior.cpp  magic_path_behavior.h  magic_path_firmware.cpp  mariel_sm.cpp  mariel_sm.h  monster.cpp  monster.h  player_device.cpp  player_device.h  sm_behavior.cpp  sm_behavior.h  sm_data.cpp  sm_data.h
projects/Tor_radiation/: Glue.h  health.cpp  health.h  lustra.cpp  lustra.h  player_device.cpp  player_device.h  sm_data.cpp  sm_data.h  tor_radiation_emulator.cpp  tor_radiation_firmware.cpp
projects/basic_behavior/: basic_behavior.cpp  basic_behavior.h  basic_behavior_emulator.cpp  basic_behavior_firmware.cpp
projects/feeling_behavior/: feeling_behavior.cpp  feeling_behavior.h  feeling_behavior_emulator.cpp
projects/giganda_behavior/: giganda_behavior.cpp  giganda_behavior.h  giganda_behavior_emulator.cpp
projects/integration_testing_behavior/: integration_testing_behavior.cpp  integration_testing_behavior.h  integration_testing_behavior_firmware.cpp
projects/kirlits_behavior/: kirlits_behavior.cpp  kirlits_behavior.h  kirlits_behavior_emulator.cpp
projects/leo_behavior/: leo_behavior.cpp  leo_behavior.h  leo_behavior_emulator.cpp  leo_behavior_firmware.cpp
projects/my_behavior/: my_behavior.cpp  my_behavior.h  my_behavior_emulator.cpp  my_behavior_firmware.cpp
projects/seven_strides_behavior/: seven_strides_behavior.cpp  seven_strides_behavior_emulator.cpp  seven_strides_behavior_firmware.cpp  seven_strides_behaviour.h
projects/sm_behavior/: Glue.h  ability.cpp  ability.h  eventHandlers.h  sm_behavior.cpp  sm_behavior.h
projects/springwind_behavior/: springwind_behavior.cpp  springwind_behavior.h  springwind_behavior_emulator.cpp  springwind_behavior_firmware.cpp
projects/springwind_behaviour/: springwind_behavior.cpp  springwind_behaviour.h
projects/test_behaviour/: test_behaviour.cpp  test_behaviour.h  test_behaviour_firmware.cpp
projects/vetta_behavior/: vetta_behavior.cpp  vetta_behavior.h  vetta_behavior_emulator.cpp  vetta_behavior_firmware.cpp
testing/: integration_test.py
