add_library(basic_behavior basic_behavior.cpp)
target_link_libraries(basic_behavior api)

add_executable(basic_behavior_emulator basic_behavior_emulator.cpp)
target_link_libraries(basic_behavior_emulator basic_behavior emulator)

add_library(giganda_behaviour try_giganda.h try_giganda.cpp)
target_link_libraries(giganda_behaviour api)

add_executable(giganda_behavior_emulator giganda_behavior_emulator.cpp)
target_link_libraries(giganda_behavior_emulator giganda_behaviour emulator)